change personal link to read.cv

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,7 @@ website:
     creator: "@laiyenju"
     site: "@242"
   body-header: | 
-    This site is brought to you by [Yen Lai](https://laiyenju.github.io)
+    This site is brought to you by [Yen Lai](https://read.cv/yenlai)
 format:
   html:
     theme: 
